# SentimentAnalysisEngine

./: CMakeLists.txt  DockerFile  README.md  SOLID.md
include/: Functions.h  Models.h  Utils.h
src/: Functions.cpp  main.cpp
tests/: SentimentTests.cpp
